<resources>
    <string name="app_name">ViewQ</string>
    <!-- Settings Activity Title -->
    <string name="settings_title">VueCue Settings</string>

    <!-- String text for empty recycle view: no internet connection -->
    <string name="no_connection">Please check you are connected to the internet.</string>
    <string name="error_unknown">An error occurred. Please try again later.</string>

    <!-- Menu titles/labels -->
    <string name="menu_settings">Settings</string>
    <string name="menu_sort_order">Sort Order</string>
    <string name="menu_sort_popular">Show most popular</string>
    <string name="menu_sort_rated">Show highest rated</string>

    <!-- List Activity Buttons -->
    <string name="button_popular">Popular</string>
    <string name="button_high_rated">High Rated</string>
    <string name="button_favourites">Favourites</string>

    <!-- Detail Fragment Text -->
    <string name="detail_empty_view_text">Click a movie to get started!</string>
    <string name="detail_average_user_rating">Average User Rating</string>
    <string name="detail_release">Release Date</string>
    <string name="date_unknown">Unknown Date</string>
    <string name="title_trailers">Trailers and Videos</string>
    <string name="title_reviews">Reviews</string>
    <string name="button_txt_read_more">Read More</string>
    <string name="button_txt_hide">Show Less</string>
    <string name="reviews_empty_text">Sorry, no reviews available.</string>
    <string name="videos_empty_text">Sorry, no trailers or videos available.</string>
    <string name="unavailable_offline">Sorry, this content is unavailable offline.</string>
    <string name="CD_image_icon_not_fav">Movie is not favorite.</string>
    <string name="CD_image_icon_is_fav">Movie is not favorite.</string>
    <string name="CD_image_poster_generic">Image of movie poster.</string>

    <!-- Snackbars Activity Text -->
    <string name="snack_no_favs">Oops! You don\'t have any favorites yet.</string>
    <string name="snack_dismiss_polite">Ok, thanks!</string>
    <string name="snack_offline_browsing">Sorry to interrupt! You\'re browsing offline. Some content
        unavailable.</string>

    <!-- Fragment Tags -->
    <string name="fragtag_content">frag_content</string>
    <string name="fragtag_detail">frag_detail</string>
    <string name="fragtag_favs_empty">frag_empty_favs</string>
    <string name="frag_empty_detail">frag_empty_detail</string>

    <!--// PREFS/SETTINGS VALUES \\-->
    <!-- Movie order preferences -->
    <string name="settings_orderby_key" translatable="false">orderby</string>
    <string name="settings_orderby_label">Show menu by default:</string>
    <string-array name="settings_orderby_array_labels">
        <item>Most Popular</item>
        <item>Highest Rated</item>
    </string-array>
    <string-array name="settings_orderby_array_values" translatable="false">
        <item>@string/settings_orderby_most_popular</item>
        <item>@string/settings_orderby_high_rated</item>
    </string-array>
    <string name="settings_orderby_most_popular" translatable="false">popular</string>
    <string name="settings_orderby_high_rated" translatable="false">top_rated</string>
    <string name="settings_order_favorites" translatable="false">favorites</string>

    <!-- Last Updated Preference (non-editable) -->
    <string name="settings_db_update_time_key" translatable="false">dbupdate</string>
    <string name="settings_db_update_time_label">Movie List Updated at:</string>
</resources>