<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings_accent_24dp"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort_menu"
        android:icon="@drawable/ic_reorder_accent_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_sort_order"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_popular"
                android:title="@string/menu_sort_popular" />
            <item
                android:id="@+id/action_sort_rating"
                android:title="@string/menu_sort_rated" />
        </menu>
    </item>
</menu>