<?xml version="1.0" encoding="utf-8"?><!--
  ~ Crafted by Michael R Lundie (2018)
  ~ Last Modified 07/10/18 09:52
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.fragments.MovieListFragment">

    <io.lundie.michael.viewcue.ui.views.RecycleViewWithSetEmpty
        android:id="@+id/movie_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/button_layout_height"
        android:paddingLeft="@dimen/half_padding"
        android:paddingRight="@dimen/half_padding" />

    <LinearLayout
        android:id="@+id/list_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="@dimen/half_padding">
        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_error_accent_65dp"/>
        <TextView
            android:id="@+id/list_empty_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_connection"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_default_large" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressRing"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="@dimen/detail_progressbar_dimen"
        android:layout_height="@dimen/detail_progressbar_dimen"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="visible" />

    <include layout="@layout/navigation_simple" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_layout_height"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center">

        <TextView
            android:id="@+id/popular_btn"
            style="@style/listBarButton"
            android:text="@string/button_popular" />

        <TextView
            android:id="@+id/high_rated_btn"
            style="@style/listBarButton"
            android:text="@string/button_high_rated" />

        <TextView
            android:id="@+id/favourites_btn"
            style="@style/listBarButton"
            android:text="@string/button_favourites" />
    </LinearLayout>

</FrameLayout>