<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootCoordLayout">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:fillViewport="true"
            android:paddingBottom="?android:attr/actionBarSize">

            <TextView
                android:id="@+id/released_label_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:text="@string/detail_release"
                android:textColor="@color/colorPrimaryStep"
                android:textSize="@dimen/text_default_large"
                app:layout_constraintBottom_toTopOf="@+id/released_text_tv"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/detail_view_poster"
                app:layout_constraintTop_toBottomOf="@+id/vote_average_text_tv" />

            <TextView
                android:id="@+id/released_text_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/default_padding"
                android:textSize="@dimen/text_default_small"
                app:layout_constraintBottom_toTopOf="@+id/synopsis_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/released_label_tv" />

            <TextView
                android:id="@+id/vote_average_text_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:textSize="@dimen/text_default_small"
                app:layout_constraintBottom_toTopOf="@+id/released_label_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vote_average_label_tv" />

            <ImageView
                android:id="@+id/detail_view_poster"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="@dimen/default_padding"
                android:scaleType="fitCenter"
                app:layout_constraintLeft_toRightOf="@id/released_label_tv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/vote_average_label_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:text="@string/detail_average_user_rating"
                android:textColor="@color/colorPrimaryStep"
                android:textSize="@dimen/text_default_large"
                app:layout_constraintBottom_toTopOf="@+id/vote_average_text_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="@dimen/default_padding" />

            <android.support.constraint.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="detail_view_poster, vote_average_label_tv" />

            <TextView
                android:id="@+id/synopsis_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barrier" />

            <LinearLayout
                android:id="@+id/reviews_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/synopsis_tv">

            </LinearLayout>
            <LinearLayout
                android:id="@+id/related_videos_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/reviews_layout">
                <TextView
                    android:id="@+id/related_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_padding"
                    android:text="@string/title_trailers"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_default_huge"
                    app:fontFamily="sans-serif-condensed" />

                <io.lundie.michael.viewcue.ui.views.RecycleViewWithSetEmpty
                    android:id="@+id/related_video_lv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/videos_empty_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_padding"
                    android:text="@string/videos_empty_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/related_videos_layout">
                <TextView
                    android:id="@+id/review_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_padding"
                    android:text="@string/title_reviews"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_default_huge"
                    app:fontFamily="sans-serif-condensed" />

                <io.lundie.michael.viewcue.ui.views.RecycleViewWithSetEmpty
                    android:id="@+id/review_list_lv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/review_empty_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_padding"
                    android:text="@string/reviews_empty_text" />
            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/navigation_animated_paralax" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/default_padding"
        android:baselineAlignBottom="true"
        android:src="@drawable/ic_star" />
</android.support.design.widget.CoordinatorLayout>